# ssis_to_pyspark

./: CHANGELOG.md  README.md  env.example  pyproject.toml
Input/: 010_IL_Address.dtsx  HealthcareETL.dtsx  README.md
config/: default.yaml
design/: design.md
docs/: codebase_overview.md
output/HealthcareETL/: bronze_healthcareetl.py  gold_healthcareetl.py  main.py  silver_healthcareetl.py  silver_manifest.json  test_healthcareetl.py
output/HealthcareETL/doc/: healthcareetl_business_logic.md  healthcareetl_conversion_log.md  (+1 more)
output/HealthcareETL_Claude/: bronze_healthcareetl.py  gold_healthcareetl.py  main.py  silver_healthcareetl.py  silver_manifest.json  test_healthcareetl.py  utils.py
prompts/: document_business_logic.md  package_analysis.md  system.md  transformation_rules.md
prompts/analysis/: healthcareetl_analysis.md
prompts/knowledge/: bronze_layer_patterns.md  connection_manager_rules.md  control_flow_rules.md  gold_layer_patterns.md  main_orchestrator_patterns.md  microsoft_fabric_patterns.md  pyspark_patterns.md  pyspark_skeleton_template.md  silver_layer_patterns.md  ssis_xml_reference.md  type_mappings.yaml  variable_rules.md
requirements/: requirements.md
requirements/nfr/: NFR-Accuracy.md  NFR-Compatibility.md  NFR-Documentation.md  NFR-Extensibility.md  NFR-Maintainability.md  NFR-Performance.md  NFR-Reliability.md  NFR-Scalability.md  NFR-Security.md  NFR-Usability.md
scripts/: _fix_main_prompt.py  _verify_fixes.py  setup_dev.sh
src/: __init__.py  cli.py  config.py  logging.py  test.py
src/converters/: __init__.py  deterministic_converter.py
src/generators/: __init__.py  business_logic_docs.py  code_healer.py  conversion_log.py  data_model_report.py  pyspark_output.py  pyspark_unit_tests.py
src/llm/: __init__.py  anthropic_provider.py  azure_anthropic_provider.py  azure_openai_provider.py  base.py  databricks_provider.py  factory.py  gemini_provider.py  ollama_provider.py
src/parsers/: __init__.py  informatica_xml.py  ssis_dtsx.py
tests/: conftest.py
tests/fixtures/: sample_filter.xml
tests/unit/: test_parser.py
(+78 files in other folders)
